Delete all button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         
         <button id="captureBtn">Take photo</button>
         <button id="exportBtn">Export data</button>
+        <button id="deleteAllBtn" class="danger">Delete all data</button>
 
         <div class="photos" id="photoList"></div>
     </div>
